# sigverifyr0

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
siggen/: Cargo.toml
siggen/src/: main.rs
